@@ -1,5 +1,5 @@
 DIST ibus-0.1.1.20080901.tar.gz 630193 RMD160 e160730b7229aa7226dc915390dec7c3bd5c8b73 SHA1 536540bb57bd6c76790fa39796c93eb673f15207 SHA256 1775b67098050f5898176118db576de128d40dd6bb09731b0b6242022b3ea83d
-EBUILD ibus-0.1.1.20080901.ebuild 2096 RMD160 3f4378c30607d87b58ca70a6767641b76a4fb33c SHA1 7b0a4736b74fd0c1f3dc06d7660570d433a4d67a SHA256 a110df3bdc121edf724e8cccf4b4706c02b36a6676421c7ed3f3546c357f8987
-EBUILD ibus-9999.ebuild 2207 RMD160 724a58d200fa312f5cb05b3c2a8794ca9ad43217 SHA1 8bcaa96f0d7b886176bd9dd55d66d9b513dfb2da SHA256 532499da79db856448d744cf78fc213a06f858ea66872adb0dfee69fd3c521b2
-MISC ChangeLog 475 RMD160 9f5e0e22c45119a3419f6909dd8118857bb35dd4 SHA1 14317889561b0b751418596d37e045f534ce7e3e SHA256 eb8fcb4d51b1495a557f8714bf9e73e25b81f25be5cf29f040a4897f8fd0ddbc
+EBUILD ibus-0.1.1.20080901.ebuild 2104 RMD160 735486d693a315f9643ae5a8e4269c0092aabf87 SHA1 79370d2ba89cee163100da531cb521151a207520 SHA256 eec09a454627fd84b2021f9ef890254dc2dea32edd7f5b4270d064250754b128
+EBUILD ibus-9999.ebuild 2264 RMD160 9cfb80be63505edc48d6ee63d835ea981ffa0dc8 SHA1 6f92418215e82e7ec4de31d20eb37e6a06d54278 SHA256 0805b20f3d9e9f837718ffc819987af780b915e2bbe0edf7f2a5b1c71cf9ba8a
+MISC ChangeLog 605 RMD160 306394fb71a5e8b34fdd6ab2ce57970c4cb8c910 SHA1 ee221bc7e4bb5f704e6332d5d6996de0927c9ce2 SHA256 7fd81e17480b781df0ea86a715742cb5ec0b265aa7242b5757a4c207d69e837d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
